[gd_scene load_steps=8 format=2]

[ext_resource path="res://UIMain/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://Fonts/font_header.tres" type="FontFile" id=2]
[ext_resource path="res://RootScene/ScenarioSelector.gd" type="Script" id=3]
[ext_resource path="res://UIMain/TabList/PersonList.tscn" type="PackedScene" id=4]
[ext_resource path="res://UIMain/TabList/ArchitectureList.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.376471 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.376471 )

[node name="ScenarioSelector" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
custom_fonts/font = ExtResource( 2 )
text = "SELECT_SCENARIO"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScenarioContainer" type="ScrollContainer" parent="."]
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 16.0
offset_top = 64.0
offset_right = -8.0
offset_bottom = -8.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scenarios" type="VBoxContainer" parent="ScenarioContainer"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FactionContainer" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 64.0
offset_right = -16.0
offset_bottom = -64.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Factions" type="VBoxContainer" parent="FactionContainer"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HL" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -56.0
offset_bottom = -16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CustomOfficers" type="Button" parent="HL"]
offset_right = 199.0
offset_bottom = 40.0
grow_vertical = 0
disabled = true
text = "CUSTOM_OFFICERS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewFactions" type="Button" parent="HL"]
offset_left = 203.0
offset_right = 376.0
offset_bottom = 40.0
grow_vertical = 0
disabled = true
text = "NEW_FACTIONS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HR" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -56.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="Button" parent="HR"]
offset_right = 121.0
offset_bottom = 40.0
grow_horizontal = 0
grow_vertical = 0
text = "CANCEL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Confirm" type="Button" parent="HR"]
offset_left = 125.0
offset_right = 249.0
offset_bottom = 40.0
grow_horizontal = 0
grow_vertical = 0
disabled = true
text = "CONFIRM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArchitectureList" parent="." instance=ExtResource( 5 )]
visible = false

[node name="PersonList" parent="." instance=ExtResource( 4 )]
visible = false

[connection signal="pressed" from="HL/CustomOfficers" to="." method="_on_CustomOfficers_pressed"]
[connection signal="pressed" from="HL/NewFactions" to="." method="_on_NewFactions_pressed"]
[connection signal="pressed" from="HR/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="HR/Confirm" to="." method="_on_Confirm_pressed"]
[connection signal="architecture_selected" from="ArchitectureList" to="." method="_on_ArchitectureList_architecture_selected"]
[connection signal="person_selected" from="PersonList" to="." method="_on_PersonList_person_selected"]
